INCLUDE_DIRECTORIES(
  ${OMNIORB4_INCLUDE_DIR}
  ${PROJECT_BINARY_DIR}/idl
  ${PROJECT_SOURCE_DIR}/
  ${PROJECT_SOURCE_DIR}/monitor
  ${PROJECT_SOURCE_DIR}/libraries/LogToolBaseC++
)

#########
INCLUDE_DIRECTORIES( ${LOGSERVICE_SOURCE_DIR}/src/libraries/LogToolBaseC++ )

ADD_EXECUTABLE( DIETtestTool DIETtestTool.cc )
TARGET_LINK_LIBRARIES( DIETtestTool
  dadiCORBAlog
  ${DADICORBA_LIB}
  ${OMNIORB4_LIBRARIES}
  LogServiceMonitor
)
INSTALL( TARGETS DIETtestTool DESTINATION bin )

