INCLUDE_DIRECTORIES(
  ${OMNIORB4_INCLUDE_DIR}
  ${LOGS_SOURCE_DIR}         # For e.g. ORBTools.hh
  ${FWD_INCLUDE_DIR}/src/idl
)

ADD_LIBRARY( LogServiceToolBase LogToolBase.cc)
#ADD_DEPENDENCIES( LogServiceToolBase
#  LOGSERVICE_TARGET_IDL_GENERATED_HEADER_FILES
#)
#SET_TARGET_PROPERTIES(LogServiceToolBase PROPERTIES VERSION ${LOGSERVICE_VERSION})
TARGET_LINK_LIBRARIES( LogServiceToolBase
#  LogForwarderUtils
  ${FWD_LIBRARY}
  LogCommon
  ${OMNIORB4_LIBRARIES}
)
INSTALL( TARGETS LogServiceToolBase DESTINATION lib )
include(CPack)