INCLUDE_DIRECTORIES(
  ${OMNIORB4_INCLUDE_DIR}
  ${PROJECT_SOURCE_DIR}         # For e.g. ORBTools.hh
  ${PROJECT_SOURCE_DIR}/monitor
  ${PROJECT_BINARY_DIR}/idl
)

ADD_LIBRARY( LogServiceToolBase LogToolBase.cc)
ADD_DEPENDENCIES( LogServiceToolBase
  LOGSERVICE_TARGET_IDL_GENERATED_HEADER_FILES
)
#SET_TARGET_PROPERTIES(LogServiceToolBase PROPERTIES VERSION ${DADICORBA_VERSION})
TARGET_LINK_LIBRARIES( LogServiceToolBase
  dadiCORBAlog
  ${OMNIORB4_LIBRARIES}
)
INSTALL( TARGETS LogServiceToolBase DESTINATION lib )
include(CPack)